<resources>
    <string name="app_name">Reliable home tution</string>
    <string name="profile">Profile</string>
    <string name="teacherdetails">TeacherDetails</string>
    <string name="contact">Contact</string>
    <string name="notification">Notification</string>
    <string name="open" />
    <string name="close" />
    <string name="logout">logout</string>
    <string name="feedback" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feedbacks">feedbacks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>